--- a/app/src/main/res/layout/bottomsheet.xml
+++ b/app/src/main/res/layout/bottomsheet.xml
@@ -62,6 +62,7 @@
         >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textInputEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="نام شرکت"
